--- a/css/style1.css
+++ b/css/style1.css
@@ -29,6 +29,7 @@ h4{
     font-family: sans-serif;
     text-transform: uppercase;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 p{
@@ -67,6 +68,7 @@ footer p{
 
 .related{
     list-style: none;
+    margin-left: 0;
 }
 
 .main-header{
@@ -77,17 +79,71 @@ aside{
     background-color: #f7f7f7;
     border-top: 5px solid #1098ad;
     border-bottom: 5px solid #1098ad;
+    padding: 50px 40px;
+    box-sizing: border-box;
 }
 
  body{ 
      
      font-family: sans-serif;
      border-top: 18px solid #1098ad;
+
+     position:  relative;
  } 
+
+ .container{
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+ }
 
 /* .first-li { 
     font-weight: bold;
  } */
+
+ .post-img{
+    width: 100%;
+    height: auto;
+ }
+
+ nav a:link{
+    margin-right: 30px;
+    margin-top: 18px;
+    display: inline-block;
+ }
+
+ nav a:link last-child{
+    margin-right: 0;
+ }
+
+ button{
+    font-size: 22px;
+    padding: 20px;
+    cursor: pointer;
+    position: absolute;
+    /*top: 50px;
+    left: 50px;*/
+
+    bottom: 50px;
+    right: 50px;
+ }
+
+ h1::first-letter{
+    font-style: normal;
+    margin-right: 5px;
+ }
+
+ h2::after{
+    content: "TOP";
+    background-color: #ffe70e;
+    font-size: 18px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 10px;
+    position: absolute;
+    top: -10 px;
+    right: -25px;
+ }
 
  li:first-child {
     font-weight: bold;
@@ -128,4 +184,44 @@ aside{
 
 nav{
     font-size: 18px;
+}
+
+/*FLOATS*/
+.author-img{
+    float: left;
+}
+
+.author{
+    padding-left: 80px;
+    padding-top: 10px;
+    float: right;
+}
+
+h1{
+    float: left;
+}
+
+nav{
+    float: right;
+}
+
+.clear{
+    clear: both;
+}
+
+article{
+    /*background-color: green;*/
+    width: 825px;
+    float: left;
+}
+
+aside{
+   /* background-color: red;*/
+    width: 300px;
+    float: right;
+}
+
+footer{
+  /*  background-color: yellow;*/
+    clear: both; 
 }
