--- a/css/style1.css
+++ b/css/style1.css
@@ -225,3 +225,80 @@ footer{
   /*  background-color: yellow;*/
     clear: both; 
 }
+
+/*FLEXBOX*/
+.main-header{
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+}
+
+.author-box{
+    display: flex;
+    align-items: center;
+}
+
+.author{
+    margin-bottom: 0;
+    margin-left: 15px
+    
+}
+
+.related-post{
+    display: flex;
+    align-items: center;
+}
+
+.related-link:link{
+    font-size: 18px;
+    font-weight: bold;
+    font-style: normal;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.related-author{
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: italic;
+}
+
+/*FLEXBOX LAYOUT*/
+/*.row{
+    display: flex;
+    margin-bottom: 60px;
+}
+
+article{
+    flex: 1;
+    margin-bottom: 0;
+}
+
+aside{
+    flex: 0 0 300px;
+}*/
+
+.container{
+    display: grid;
+    grid-template-columns: 1fr 300px;
+    column-gap: 75px;
+    row-gap: 60px;
+    align-items: start;
+}
+
+.main-header{
+    grid-column: 1 / -1;
+}
+
+article{
+
+}
+
+aside{
+
+}
+
+footer{
+    grid-column: 1 / -1;
+}
